# subd2

./: .env.template  .gitignore  .shellcheckrc  Cargo.toml  README.md
scripts/: scratch.sh  update_envs.sh  update_twitch_bot_env.sh  update_twitch_broadcaster_env.sh  watch.sh
src/: main.rs
